@@ -7,9 +7,14 @@ Sat Mar 23 17:20:00 1996  Sam Hartman  <hartmans@tertius.mit.edu>
 	* krshd.c (doit): Don't use non-blocking IO; it is unnecessary and
  	may cause problems.
 
+Fri Mar 22 13:27:40 1996  Richard Basch  <basch@lehman.com>
+
+	* krshd.c: use the library routines to do v4 to v5
+	principal translation, for a more accurate representation.
+
 Wed Mar 20 19:36:21 1996  Richard Basch  <basch@lehman.com>
 
-	* krlogind.c (recvauth): use the library routines to do v4 to v5
+	* krlogind.c: use the library routines to do v4 to v5
 	principal translation, for a more accurate representation.
 
 Tue Mar 19 20:11:28 1996  Richard Basch  <basch@lehman.com>
